[workspace]
resolver = "3"
members = [
    "crates/*",
]
[workspace.dependencies]
# MCP SDK
rmcp = { version = "1.7", default-features = false }

# Async runtime
tokio = "1"

# HTTP client
reqwest = { version = "0.12", default-features = false }

# Serialization
serde = "1"
serde_json = "1"

# Error handling
thiserror = "2"

# Tracing
tracing = "0.1"
tracing-error = "0.2"

# Secret management
secrecy = "0.10"

# Schema validation
jsonschema = { version = "0.26", default-features = false }

# Time
chrono = { version = "0.4", default-features = false }

# Optional: rig-core shim
rig-core = "0.9"

# Optional: OpenTelemetry
opentelemetry = "0.27"
opentelemetry-otlp = "0.27"
opentelemetry_sdk = "0.27"
tracing-opentelemetry = "0.28"

# Test/support
color-eyre = "0.6"
tracing-subscriber = "0.3"
wiremock = "0.6"
